--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
     "require": {
-        "silex/silex": "^1.3"
+        "silex/silex": "^1.3",
+        "twig/twig": ">=1.8,<2.0-dev",
+        "symfony/twig-bridge": "~2.3"
     },
     "autoload": {
         "psr-4": {
