--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,14 @@
     "require": {
         "silex/silex": "^1.3",
         "twig/twig": ">=1.8,<2.0-dev",
-        "symfony/twig-bridge": "~2.3"
+        "symfony/twig-bridge": "~2.3",
+        "doctrine/orm": "~2.4"
     },
+
+    "config": {
+        "bin-dir": "bin/"
+    },
+
     "autoload": {
         "psr-4": {
             "Code\\Sistema\\": "src/Code/Sistema/"
